{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 251,
  "lineage": "20f174b1-7279-bc4b-fd1f-6ba4345b2293",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0b119a9fd615e784f",
            "id": "rtb-0b119a9fd615e784f",
            "owner_id": "975195398054",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c152f79cbcaa4ded",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-public",
              "deploy": "almanza-app-lab-a",
              "environment": "dev"
            },
            "vpc_id": "vpc-00bcc5f3488637652"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.natgw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-027e123b63f057908",
            "domain": "vpc",
            "id": "eipalloc-0f8efd53fe6f2c80e",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0c2a67342346c3f62",
            "private_dns": "ip-10-1-1-52.eu-west-1.compute.internal",
            "private_ip": "10.1.1.52",
            "public_dns": "ec2-52-208-230-154.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.208.230.154",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "natgw-eip",
              "deploy": "almanza-app-lab-a",
              "environment": "dev"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:975195398054:internet-gateway/igw-0e6a8a321820ac1e9",
            "id": "igw-0e6a8a321820ac1e9",
            "owner_id": "975195398054",
            "tags": {
              "Name": "igw",
              "deploy": "almanza-app-lab-a",
              "environment": "dev"
            },
            "vpc_id": "vpc-00bcc5f3488637652"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f8efd53fe6f2c80e",
            "id": "nat-0c152f79cbcaa4ded",
            "network_interface_id": "eni-0c2a67342346c3f62",
            "private_ip": "10.1.1.52",
            "public_ip": "52.208.230.154",
            "subnet_id": "subnet-08fe87174eecf8fca",
            "tags": {
              "Name": "natgw",
              "deploy": "almanza-app-lab-a",
              "environment": "dev"
            }
          },
          "dependencies": [
            "aws_eip.eip-natgw",
            "aws_subnet.subnet-public-1",
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03141498ce54df97d",
            "owner_id": "975195398054",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e6a8a321820ac1e9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-public",
              "deploy": "almanza-app-lab-a",
              "environment": "dev"
            },
            "vpc_id": "vpc-00bcc5f3488637652"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d2eda168b853aa8",
            "route_table_id": "rtb-0b119a9fd615e784f",
            "subnet_id": "subnet-0be858d5b1f5d86de"
          },
          "dependencies": [
            "aws_default_route_table.default-rt",
            "aws_eip.eip-natgw",
            "aws_nat_gateway.natgw",
            "aws_subnet.subnet-private-3",
            "aws_subnet.subnet-public-1",
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1190bb9817e8e0a",
            "route_table_id": "rtb-0b119a9fd615e784f",
            "subnet_id": "subnet-09107d0286cd5f85f"
          },
          "dependencies": [
            "aws_default_route_table.default-rt",
            "aws_eip.eip-natgw",
            "aws_nat_gateway.natgw",
            "aws_subnet.subnet-private-4",
            "aws_subnet.subnet-public-1",
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a69df535c4cb76e0",
            "route_table_id": "rtb-03141498ce54df97d",
            "subnet_id": "subnet-08fe87174eecf8fca"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.public",
            "aws_subnet.subnet-public-1",
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf9f1f7750aa93d6",
            "route_table_id": "rtb-03141498ce54df97d",
            "subnet_id": "subnet-01f57fbdc2df9ffc7"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.public",
            "aws_subnet.subnet-public-2",
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:975195398054:security-group/sg-08318da6e9151b3f0",
            "description": "Allow inbound traffic to eks controlplane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08318da6e9151b3f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from eks public access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.1.3.0/24",
                  "10.1.4.0/24"
                ],
                "description": "ALL from private subnets",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eks-control-rules",
            "name_prefix": "",
            "owner_id": "975195398054",
            "revoke_rules_on_delete": false,
            "tags": {
              "deploy": "almanza-app-lab-a",
              "environment": "dev",
              "name": "front-rules"
            },
            "timeouts": null,
            "vpc_id": "vpc-00bcc5f3488637652"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:975195398054:security-group/sg-0cd8ddb36a601229f",
            "description": "Allow inbound traffic to front",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd8ddb36a601229f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "expose app public access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "front-rules",
            "name_prefix": "",
            "owner_id": "975195398054",
            "revoke_rules_on_delete": false,
            "tags": {
              "deploy": "almanza-app-lab-a",
              "environment": "dev",
              "name": "front-rules"
            },
            "timeouts": null,
            "vpc_id": "vpc-00bcc5f3488637652"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:975195398054:subnet/subnet-0be858d5b1f5d86de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0be858d5b1f5d86de",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975195398054",
            "tags": {
              "Name": "subnet-private-3",
              "deploy": "almanza-app-lab-a",
              "environment": "dev",
              "kubernetes.io/cluster/almanza-app-lab-a": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00bcc5f3488637652"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-private-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:975195398054:subnet/subnet-09107d0286cd5f85f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-09107d0286cd5f85f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975195398054",
            "tags": {
              "Name": "subnet-private-4",
              "deploy": "almanza-app-lab-a",
              "environment": "dev",
              "kubernetes.io/cluster/almanza-app-lab-a": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00bcc5f3488637652"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:975195398054:subnet/subnet-08fe87174eecf8fca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-08fe87174eecf8fca",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975195398054",
            "tags": {
              "Name": "subnet-public-1",
              "deploy": "almanza-app-lab-a",
              "environment": "dev",
              "kubernetes.io/cluster/almanza-app-lab-a": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00bcc5f3488637652"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:975195398054:subnet/subnet-01f57fbdc2df9ffc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-01f57fbdc2df9ffc7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975195398054",
            "tags": {
              "Name": "subnet-public-2",
              "deploy": "almanza-app-lab-a",
              "environment": "dev",
              "kubernetes.io/cluster/almanza-app-lab-a": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00bcc5f3488637652"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:975195398054:vpc/vpc-00bcc5f3488637652",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0f8089dfc1e1cf473",
            "default_route_table_id": "rtb-0b119a9fd615e784f",
            "default_security_group_id": "sg-054405f8d82ae07b2",
            "dhcp_options_id": "dopt-7a5f201c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00bcc5f3488637652",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b119a9fd615e784f",
            "owner_id": "975195398054",
            "tags": {
              "deploy": "almanza-app-lab-a",
              "environment": "dev",
              "kubernetes.io/cluster/almanza-app-lab-a": "shared"
            }
          }
        }
      ]
    }
  ]
}